# relational-analysis

./: .gitignore  CMakeLists.txt  README.md  presentation_outline.txt
docs/: presentation_outline.txt
samples/: AddSubMulDiv.c  If.c  basic_loop.c  custom_sample.c  fibonacci.c  forModulo.c  generateCFG.sh  leastUpperBounds.c  loops-and-branches.c  mac_run.sh  phi_basic.c  recursive.c  run.sh  run_dot.sh  simpleNestedFor.c  whileDoesntTerminate.c  whileTerminates.c
src/: BasicRelationalAnalysisPass.cpp  BbWorklist.cpp  BbWorklist.h  BlockManager.cpp  BlockManager.h  InstructionVisitor.cpp  InstructionVisitor.h  globals.cpp  globals.h  util.h
src/common/: AbstractDomain.cpp  AbstractDomain.h  BbSorter.h  BbWorklist.cpp  BbWorklist.h  BlockManager.cpp  BlockManager.h  ClassType.h  Compare.h  Constant.cpp  Constant.h  InstructionVisitor.cpp  InstructionVisitor.h  Representative.cpp  Representative.h  RepresentativeCompare.h  RepresentativeHasher.cpp  RepresentativeHasher.h  State.cpp  State.h  Variable.cpp  Variable.h
src/domains/: EqualityDomain.cpp  EqualityDomain.h
src/dotprinter/: CustomGraphWriter.h  DotPrinter.cpp  DotPrinter.h
test/: CMakeLists.txt  EqualityDomainTest.cpp
